--- a/Stage1/StackTest/StackTest.vm
+++ b/Stage1/StackTest/StackTest.vm
@@ -32,14 +32,14 @@ gt
 push constant 32766
 push constant 32766
 gt
-//push constant 57
-//push constant 31
-//push constant 53
-//add
-//push constant 112
-//sub
-//neg
-//and
-//push constant 82
-//or
-//not
+push constant 57
+push constant 31
+push constant 53
+add
+push constant 112
+sub
+neg
+and
+push constant 82
+or
+not
