--- a/test.vm
+++ b/test.vm
@@ -1,7 +1,5 @@
-push constant 5
-push constant 6
-pop temp 0
-pop temp 1
+push constant 4000
+push constant 5000
+pop pointer 1
+pop pointer 0
 
-push temp 1
-push temp 0
