--- a/test.vm
+++ b/test.vm
@@ -1,5 +1,19 @@
-push constant 4000
-push constant 5000
-pop pointer 1
-pop pointer 0
+push constant 5
+push constant 5
+eq
 
+if-goto EQ
+goto NEQ
+
+label  EQ
+push constant 11
+
+label NEQ
+push constant 7
+
+push constant 5
+push constant 6
+eq
+
+if-goto EQ
+goto NEQ
