--- a/test.vm
+++ b/test.vm
@@ -1,19 +1,1 @@
-push constant 5
-push constant 5
-eq
-
-if-goto EQ
-goto NEQ
-
-label  EQ
-push constant 11
-
-label NEQ
-push constant 7
-
-push constant 5
-push constant 6
-eq
-
-if-goto EQ
-goto NEQ
+function f 3
