--- a/TestFiles/Project9/Ball.vm
+++ b/TestFiles/Project9/Ball.vm
@@ -3,11 +3,20 @@ push constant 3
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop this 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push argument 1
-pop this 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push argument 2
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push pointer 0
 return
 function Ball.getY 0
@@ -24,13 +33,16 @@ function Ball.setStillPitching 0
 push argument 0
 pop pointer 0
 push argument 1
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 return
 function Ball.draw 0
 push argument 0
 pop pointer 0
-push constant 0
+push constant 1
 not
 call Screen.setColor 1
 pop temp 0
@@ -60,45 +72,46 @@ pop pointer 0
 push argument 1
 push constant 0
 eq
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push pointer 0
-call Ball.pitchFast 1
+not
+if-goto false.156
+call pitchFast 0
 pop temp 0
-label IF_FALSE0
+goto end.156
+label false.156
+label end.156
 push argument 1
 push constant 1
+not
 eq
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
-push pointer 0
-call Ball.pitchSlow 1
+not
+if-goto false.169
+call pitchSlow 0
 pop temp 0
-label IF_FALSE1
+goto end.169
+label false.169
+label end.169
 push argument 1
 push constant 2
 eq
-if-goto IF_TRUE2
-goto IF_FALSE2
-label IF_TRUE2
-push pointer 0
+not
+if-goto false.182
 push argument 2
-call Ball.pitchCurveLeft 2
+call pitchCurveLeft 1
 pop temp 0
-label IF_FALSE2
+goto end.182
+label false.182
+label end.182
 push argument 1
 push constant 3
 eq
-if-goto IF_TRUE3
-goto IF_FALSE3
-label IF_TRUE3
-push pointer 0
+not
+if-goto false.196
 push argument 3
-call Ball.pitchCurveRight 2
+call pitchCurveRight 1
 pop temp 0
-label IF_FALSE3
+goto end.196
+label false.196
+label end.196
 push constant 0
 return
 function Ball.pitchFast 0
@@ -106,24 +119,28 @@ push argument 0
 pop pointer 0
 push this 1
 push constant 248
-gt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+not
+if-goto false.219
 push constant 0
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 return
-label IF_FALSE0
-push pointer 0
-call Ball.erase 1
+goto end.219
+label false.219
+label end.219
+call erase 0
 pop temp 0
 push this 1
 push constant 5
 add
-pop this 1
-push pointer 0
-call Ball.draw 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+call draw 0
 pop temp 0
 push constant 0
 return
@@ -132,42 +149,50 @@ push argument 0
 pop pointer 0
 push this 1
 push constant 245
-gt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+not
+if-goto false.260
 push constant 0
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 return
-label IF_FALSE0
-push pointer 0
-call Ball.erase 1
+goto end.260
+label false.260
+label end.260
+call erase 0
 pop temp 0
 push this 1
 push constant 2
 add
-pop this 1
-push pointer 0
-call Ball.draw 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+call draw 0
 pop temp 0
 push constant 0
 return
 function Ball.resetBall 0
 push argument 0
 pop pointer 0
-push pointer 0
-call Ball.erase 1
+call erase 0
 pop temp 0
 push constant 255
-pop this 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 100
-pop this 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 600
 call Sys.wait 1
 pop temp 0
-push pointer 0
-call Ball.draw 1
+call draw 0
 pop temp 0
 push constant 0
 return
@@ -181,7 +206,10 @@ push this 0
 push argument 1
 sub
 call Math.multiply 2
-pop local 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push this 1
 push argument 2
 sub
@@ -189,12 +217,18 @@ push this 1
 push argument 2
 sub
 call Math.multiply 2
-pop local 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push local 0
 push local 1
 add
 call Math.sqrt 1
-pop local 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push local 2
 return
 function Ball.contact 0
@@ -203,34 +237,31 @@ pop pointer 0
 push argument 1
 call Bat.getY 1
 push this 1
-lt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+not
+if-goto false.411
 push argument 1
 call Bat.drawHorizontal 1
-pop temp 0
 push constant 0
 return
-label IF_FALSE0
-push pointer 0
+goto end.411
+label false.411
+label end.411
 push argument 1
 call Bat.getX 1
 push argument 1
 call Bat.getY 1
-call Ball.distance 3
+call distance 2
 push constant 49
-gt
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
+not
+if-goto false.433
 push argument 1
 call Bat.drawHorizontal 1
-pop temp 0
 push constant 0
 return
-label IF_FALSE1
-push constant 0
+goto end.433
+label false.433
+label end.433
+push constant 1
 not
 return
 function Ball.pitchCurveLeft 0
@@ -238,42 +269,51 @@ push argument 0
 pop pointer 0
 push this 1
 push constant 247
-gt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+not
+if-goto false.476
 push constant 0
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 return
-label IF_FALSE0
-push pointer 0
-call Ball.erase 1
+goto end.476
+label false.476
+label end.476
+call erase 0
 pop temp 0
 push this 1
 push constant 4
 add
-pop this 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push this 1
 push argument 1
 call Vertex.getY 1
-lt
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
+pop temp 0
+not
+if-goto false.503
 push this 0
 push constant 4
 sub
-pop this 0
-goto IF_END1
-label IF_FALSE1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+goto end.503
+label false.503
 push this 0
 push constant 4
 add
-pop this 0
-label IF_END1
-push pointer 0
-call Ball.draw 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label end.503
+call draw 0
 pop temp 0
 push constant 0
 return
@@ -282,42 +322,51 @@ push argument 0
 pop pointer 0
 push this 1
 push constant 247
-gt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+not
+if-goto false.548
 push constant 0
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 return
-label IF_FALSE0
-push pointer 0
-call Ball.erase 1
+goto end.548
+label false.548
+label end.548
+call erase 0
 pop temp 0
 push this 1
 push constant 4
 add
-pop this 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push this 1
 push argument 1
 call Vertex.getY 1
-lt
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
+pop temp 0
+not
+if-goto false.575
 push this 0
 push constant 4
 add
-pop this 0
-goto IF_END1
-label IF_FALSE1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+goto end.575
+label false.575
 push this 0
 push constant 4
 sub
-pop this 0
-label IF_END1
-push pointer 0
-call Ball.draw 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label end.575
+call draw 0
 pop temp 0
 push constant 0
 return
@@ -328,14 +377,20 @@ push this 1
 push argument 1
 call Vertex.getY 1
 sub
-pop local 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push local 1
 push local 1
 call Math.multiply 2
 push argument 1
 call Vertex.getX 1
 add
-pop local 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push local 0
 return
 function Ball.dispose 0
