--- a/TestFiles/Project9/Bat.vm
+++ b/TestFiles/Project9/Bat.vm
@@ -3,13 +3,25 @@ push constant 4
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop this 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push argument 1
-pop this 1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
-pop this 3
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push pointer 0
 return
 function Bat.getIsHorizontal 0
@@ -35,7 +47,7 @@ return
 function Bat.drawVertical 0
 push argument 0
 pop pointer 0
-push constant 0
+push constant 1
 not
 call Screen.setColor 1
 pop temp 0
@@ -50,13 +62,16 @@ add
 call Screen.drawRectangle 4
 pop temp 0
 push constant 0
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 return
 function Bat.drawHorizontal 0
 push argument 0
 pop pointer 0
-push constant 0
+push constant 1
 not
 call Screen.setColor 1
 pop temp 0
@@ -70,9 +85,12 @@ push constant 6
 add
 call Screen.drawRectangle 4
 pop temp 0
-push constant 0
+push constant 1
 not
-pop this 2
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 return
 function Bat.eraseVertical 0
@@ -114,11 +132,9 @@ return
 function Bat.resetBat 0
 push argument 0
 pop pointer 0
-push pointer 0
-call Bat.eraseHorizontal 1
+call eraseHorizontal 0
 pop temp 0
-push pointer 0
-call Bat.drawVertical 1
+call drawVertical 0
 pop temp 0
 push constant 0
 return
