--- a/TestFiles/Project9/Main.vm
+++ b/TestFiles/Project9/Main.vm
@@ -1,53 +1,61 @@
 function Main.main 8
-push constant 0
+push constant 1
 not
-pop local 6
-push constant 10
-call String.new 1
-push constant 71
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 79
-call String.appendChar 2
-push constant 118
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 33
-call String.appendChar 2
-pop local 5
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+push constant Game Over!
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 call Player.new 1
-pop local 0
+pop temp 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
-pop local 7
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 255
 push constant 100
-push constant 0
+push constant 1
 not
 call Ball.new 3
-pop local 1
+pop temp 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 200
 push constant 163
 call Vertex.new 2
-pop local 3
+pop temp 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 310
 push constant 163
 call Vertex.new 2
-pop local 4
+pop temp 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 240
 push constant 226
 call Bat.new 2
-pop local 2
+pop temp 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 777
 call Random.init 1
 pop temp 0
@@ -60,30 +68,37 @@ call Output.moveCursor 2
 pop temp 0
 push local 0
 call Player.getNumHits 1
+pop temp 0
 call Output.printInt 1
 pop temp 0
 push local 2
 call Bat.drawVertical 1
 pop temp 0
-label WHILE_EXP0
+label true.160
 push local 6
 not
-if-goto WHILE_END0
+if-goto end.160
 push local 1
 call Ball.getStillPitching 1
+pop temp 0
 push constant 0
 eq
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+not
+if-goto false.165
 call Random.nextInt 0
-pop local 7
+pop temp 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push local 1
-push constant 0
+push constant 1
 not
 call Ball.setStillPitching 2
 pop temp 0
-label IF_FALSE0
+goto end.165
+label false.165
+label end.165
 push constant 8
 push constant 7
 call Output.moveCursor 2
@@ -91,27 +106,28 @@ pop temp 0
 push local 7
 call Output.printInt 1
 pop temp 0
-label WHILE_EXP1
+label true.212
 push local 1
 call Ball.getStillPitching 1
+pop temp 0
 not
-if-goto WHILE_END1
+if-goto end.212
 call Keyboard.keyPressed 0
+pop temp 0
 push constant 32
 eq
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
+not
+if-goto false.221
 push local 1
 push constant 0
 call Ball.setStillPitching 2
 pop temp 0
 push local 2
 call Bat.getIsHorizontal 1
+pop temp 0
 not
-if-goto IF_TRUE2
-goto IF_FALSE2
-label IF_TRUE2
+not
+if-goto false.240
 push local 2
 call Bat.eraseVertical 1
 pop temp 0
@@ -121,9 +137,9 @@ pop temp 0
 push local 1
 push local 2
 call Ball.contact 2
-if-goto IF_TRUE3
-goto IF_FALSE3
-label IF_TRUE3
+pop temp 0
+not
+if-goto false.264
 push local 2
 call Bat.drawHorizontal 1
 pop temp 0
@@ -136,6 +152,7 @@ call Output.moveCursor 2
 pop temp 0
 push local 0
 call Player.getNumHits 1
+pop temp 0
 call Output.printInt 1
 pop temp 0
 push constant 250
@@ -147,8 +164,8 @@ pop temp 0
 push local 1
 call Ball.resetBall 1
 pop temp 0
-goto IF_END3
-label IF_FALSE3
+goto end.264
+label false.264
 push local 2
 call Bat.drawHorizontal 1
 pop temp 0
@@ -163,10 +180,17 @@ push local 2
 call Bat.drawHorizontal 1
 pop temp 0
 push constant 0
-pop local 6
-label IF_END3
-label IF_FALSE2
-label IF_FALSE1
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+label end.264
+goto end.240
+label false.240
+label end.240
+goto end.221
+label false.221
+label end.221
 push local 1
 push local 7
 push local 3
@@ -178,11 +202,10 @@ call Sys.wait 1
 pop temp 0
 push local 1
 call Ball.getY 1
+pop temp 0
 push constant 246
-gt
-if-goto IF_TRUE4
-goto IF_FALSE4
-label IF_TRUE4
+not
+if-goto false.395
 push constant 5
 push constant 7
 call Output.moveCursor 2
@@ -191,12 +214,15 @@ push local 5
 call Output.printString 1
 pop temp 0
 push constant 0
-pop local 6
-label IF_FALSE4
-goto WHILE_EXP1
-label WHILE_END1
-goto WHILE_EXP0
-label WHILE_END0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
+goto end.395
+label false.395
+label end.395
+label end.212
+label end.160
 push local 1
 call Ball.dispose 1
 pop temp 0
