--- a/TestFiles/Project9/Player.vm
+++ b/TestFiles/Project9/Player.vm
@@ -3,7 +3,10 @@ push constant 1
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop this 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push pointer 0
 return
 function Player.getNumHits 0
@@ -16,8 +19,12 @@ push argument 0
 pop pointer 0
 push this 0
 push constant 1
+not
 add
-pop this 0
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 0
 return
 function Player.dispose 0
