Maybe needs some debug

--- a/TestFiles/Project10/ArrayTest/Main.vm
+++ b/TestFiles/Project10/ArrayTest/Main.vm
@@ -87,3 +87,15 @@ call Output.println 0
 pop temp 0
 push constant 0
 return
+
+
+//class symbol table
+
+
+//method's symbol table
+//name: sum
+//type: int
+//kind: var
+//number: 3
+
+
