--- a/TestFiles/Project11/Average/Main.vm
+++ b/TestFiles/Project11/Average/Main.vm
@@ -62,3 +62,15 @@ call Output.printInt 1
 pop temp 0
 push constant 0
 return
+
+
+//class symbol table
+
+
+//method's symbol table
+//name: sum
+//type: int
+//kind: var
+//number: 3
+
+
