--- a/TestFiles/Project11/Pong/Ball.vm
+++ b/TestFiles/Project11/Pong/Ball.vm
@@ -583,3 +583,682 @@ call setDestination 2
 pop temp 0
 push constant 0
 return
+
+
+//class symbol table
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: AbottomWall
+//type: int
+//kind: argument
+//number: 5
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: temp
+//type: int
+//kind: var
+//number: 2
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: this
+//type: Ball
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
+//method's symbol table
+//name: factor
+//type: int
+//kind: var
+//number: 4
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+//name: lengthx
+//type: int
+//kind: this
+//number: 2
+//name: lengthy
+//type: int
+//kind: this
+//number: 3
+//name: d
+//type: int
+//kind: this
+//number: 4
+//name: straightD
+//type: int
+//kind: this
+//number: 5
+//name: diagonalD
+//type: int
+//kind: this
+//number: 6
+//name: invert
+//type: boolean
+//kind: this
+//number: 7
+//name: positivex
+//type: boolean
+//kind: this
+//number: 8
+//name: positivey
+//type: boolean
+//kind: this
+//number: 9
+//name: leftWall
+//type: int
+//kind: this
+//number: 10
+//name: rightWall
+//type: int
+//kind: this
+//number: 11
+//name: topWall
+//type: int
+//kind: this
+//number: 12
+//name: bottomWall
+//type: int
+//kind: this
+//number: 13
+//name: wall
+//type: int
+//kind: this
+//number: 14
+
+
