--- a/TestFiles/Project9/Vertex.vm
+++ b/TestFiles/Project9/Vertex.vm
@@ -32,3 +32,72 @@ call Memory.dealloc 1
 pop temp 0
 push constant 0
 return
+
+
+//class symbol table
+//name: y
+//type: int
+//kind: this
+//number: 1
+
+
+//method's symbol table
+//name: _y
+//type: int
+//kind: argument
+//number: 1
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+
+
+//method's symbol table
+//name: this
+//type: Vertex
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+
+
+//method's symbol table
+//name: this
+//type: Vertex
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+
+
+//method's symbol table
+//name: this
+//type: Vertex
+//kind: argument
+//number: 0
+//name: x
+//type: int
+//kind: this
+//number: 0
+//name: y
+//type: int
+//kind: this
+//number: 1
+
+
