--- a/TestFiles/Project11/Square/Main.vm
+++ b/TestFiles/Project11/Square/Main.vm
@@ -13,3 +13,15 @@ call SquareGame.dispose 1
 pop temp 0
 push constant 0
 return
+
+
+//class symbol table
+
+
+//method's symbol table
+//name: game
+//type: SquareGame
+//kind: var
+//number: 0
+
+
